# WireQuery

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  test.json
include/wq/: aggregate.hpp  cli.hpp  concurrency.hpp  json.hpp  model.hpp  options.hpp  output.hpp  rawdns.hpp  resolver.hpp  runner.hpp  usecases.hpp
src/app/: cli.cpp
src/domain/: json.cpp
src/infra/: posix_resolver.cpp  rawdns_ldns.cpp
src/presentation/: output_json.cpp  output_text.cpp
src/usecases/: aggregate.cpp  run_queries.cpp  runner_posix.cpp  runner_rawdns.cpp
src/utils/: concurrency.cpp
tests/: aggregate_tests.cpp  concurrency_tests.cpp  expect_regex.sh  presentation_tests.cpp  runner_tests.cpp
